--- a/po/ug.po
+++ b/po/ug.po
@@ -1380,8 +1380,7 @@ msgstr[0] "%1$d row deleted."
 #, php-format
 msgid "%1$d row inserted."
 msgid_plural "%1$d rows inserted."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%1$d قۇر قوشۇلدى."
 
 #: libraries/StorageEngine.class.php:196
 msgid ""
