Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -1480,6 +1480,10 @@ msgid ""
 "configuration and make sure that they correspond to the information given by "
 "the administrator of the MySQL server."
 msgstr ""
+"phpMyAdmin tried to connect to the MySQL server, and the server rejected the "
+"connection. You should check the host, username and password in your "
+"configuration and make sure that they correspond to the information given by "
+"the administrator of the MySQL server."
 
 #: libraries/auth/cookie.auth.lib.php:230
 msgid "Log in"
