--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 13:53+0200\n"
-"PO-Revision-Date: 2010-07-26 05:00+0200\n"
+"PO-Revision-Date: 2010-07-26 05:01+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1519,7 +1519,7 @@ msgstr "مۇلازىمىتېر تاللاش"
 
 #: libraries/auth/cookie.auth.lib.php:306 libraries/header.inc.php:58
 msgid "Cookies must be enabled past this point."
-msgstr ""
+msgstr "Cookies نى قوزغاتقاندىن كېيىن ئاندىن كېرىڭ."
 
 #: libraries/auth/cookie.auth.lib.php:638
 #: libraries/auth/signon.auth.lib.php:180
