--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-26 17:18+0200\n"
-"PO-Revision-Date: 2010-07-26 05:01+0200\n"
+"PO-Revision-Date: 2010-07-27 04:30+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -93,7 +93,7 @@ msgstr "مۇشۇ قىممەتنى ئىشلىتىش"
 
 #: bs_disp_as_mime_type.php:29 bs_play_media.php:35
 msgid "No blob streaming server configured!"
-msgstr ""
+msgstr "No blob streaming server configured!"
 
 #: bs_disp_as_mime_type.php:35
 #, fuzzy
