--- a/ChangeLog
+++ b/ChangeLog
@@ -97,6 +97,7 @@ $Id$
 - [interface] Better formatting for SQL validator results.
 - [doc] The linked-tables infrastructure is now called phpMyAdmin
   configuration storage.
+- [interface] Move drop/empty links from being tabs to Operations tab.
 
 3.3.6.0 (not yet released)
 - bug #3033063 [core] Navi gets wrong db name
