--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-27 11:46+0200\n"
+"PO-Revision-Date: 2010-07-27 11:47+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -257,7 +257,7 @@ msgstr "ئۆزگەرتىلگەن ساندان ئىسمى"
 #: db_operations.php:391
 #, php-format
 msgid "Database %s has been dropped."
-msgstr ""
+msgstr "ساندان %s ئۆچۈرۈلدى."
 
 #: db_operations.php:396
 #, fuzzy
