Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-27 11:54+0200\n"
+"PO-Revision-Date: 2010-07-27 12:20+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1584,6 +1584,11 @@ msgid ""
 "semicolon is missing somewhere.<br />If you receive a blank page, everything "
 "is fine."
 msgstr ""
+"phpMyAdmin تەڭشەك ھۆجقىتىنى ئوقۇيالمىدى! <br /> ھۆججەت يوق ياكى، بۇزۇق "
+"بولۇشى مۇمكىن.<br /> تۆۋەندىكى ئۇلىنىشتىن تەڭشەك ھۆجقىتنى ئېچىپ كۆرۈڭ، "
+"ئاندىن ئكزىڭىزنىڭ PHP تەڭشەكلىرىنى كۆرۈڭ.كۆپ ھاللاردا قوش چىكىت ياكى "
+"چىكىتلىك بەش لەردىن خاتالىق كۆرۈلىدۇ.<br /> ئەگەر سىز بىر ئاق بەت كۆرسىڭىز "
+"مەسىلە يوقلىقىنى بىلدۈرىدۇ."
 
 #: libraries/common.inc.php:578
 #, php-format
