Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-27 12:21+0200\n"
+"PO-Revision-Date: 2010-07-27 12:23+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1599,7 +1599,7 @@ msgstr "تەڭشەك ئەندىزى %1$s كىرگۈزىلمىدى."
 msgid ""
 "The <tt>$cfg['PmaAbsoluteUri']</tt> directive MUST be set in your "
 "configuration file!"
-msgstr ""
+msgstr " <tt>$cfg['PmaAbsoluteUri']</tt> نى تەڭشەڭ !تەڭشەك ھۆججىتى ئىچىدىكى"
 
 #: libraries/common.inc.php:613
 #, php-format
