--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-27 12:26+0200\n"
+"PO-Revision-Date: 2010-07-27 12:28+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1619,7 +1619,7 @@ msgstr "مۇلازىمىتېر"
 
 #: libraries/common.inc.php:806
 msgid "Invalid authentication method set in configuration:"
-msgstr ""
+msgstr "تەڭشەك ھۆجىتى ئىچىدىكى دەلىللەش ئۇسۇلى ئۈنۈمسىز:"
 
 #: libraries/common.inc.php:908
 #, php-format
