--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-27 12:31+0200\n"
+"PO-Revision-Date: 2010-07-27 12:32+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1651,7 +1651,7 @@ msgstr "en"
 #: libraries/sql_query_form.lib.php:421 libraries/sql_query_form.lib.php:424
 #: main.php:228 setup/lib/FormDisplay.tpl.php:124
 msgid "Documentation"
-msgstr ""
+msgstr "قوللانما"
 
 #: libraries/common.lib.php:588 libraries/header_printview.inc.php:60
 #: server_processlist.php:59 server_status.php:357
