--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-27 12:34+0200\n"
+"PO-Revision-Date: 2010-07-27 12:35+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1660,7 +1660,7 @@ msgstr "SQL سورىقى"
 
 #: libraries/common.lib.php:627
 msgid "MySQL said: "
-msgstr ""
+msgstr "MySQL جاۋابى:"
 
 #: libraries/common.lib.php:1129
 msgid "Failed to connect to SQL validator!"
