--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-27 12:35+0200\n"
+"PO-Revision-Date: 2010-07-27 12:36+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1664,7 +1664,7 @@ msgstr "MySQL جاۋابى:"
 
 #: libraries/common.lib.php:1129
 msgid "Failed to connect to SQL validator!"
-msgstr ""
+msgstr "Failed to connect to SQL validator!"
 
 #: libraries/common.lib.php:1167 setup/lib/messages.inc.php:350
 msgid "Explain SQL"
