--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-27 12:37+0200\n"
+"PO-Revision-Date: 2010-07-27 12:38+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1676,7 +1676,7 @@ msgstr "SQL ئىزاھىىدىن ئاتلاش"
 
 #: libraries/common.lib.php:1204
 msgid "Without PHP Code"
-msgstr ""
+msgstr "PHP كودى يوق"
 
 #: libraries/common.lib.php:1207 setup/lib/messages.inc.php:352
 msgid "Create PHP Code"
