--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-27 12:38+0200\n"
+"PO-Revision-Date: 2010-07-27 12:40+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1680,7 +1680,7 @@ msgstr "PHP كودى يوق"
 
 #: libraries/common.lib.php:1207 setup/lib/messages.inc.php:352
 msgid "Create PHP Code"
-msgstr ""
+msgstr "PHP كودى قۇرۇش"
 
 #: libraries/common.lib.php:1225 server_status.php:451
 #: setup/lib/messages.inc.php:351
