--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-27 12:40+0200\n"
+"PO-Revision-Date: 2010-07-27 12:41+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1689,7 +1689,7 @@ msgstr "يېڭلاش"
 
 #: libraries/common.lib.php:1234
 msgid "Skip Validate SQL"
-msgstr ""
+msgstr "SQL دەلىللەشتىن ئاتلاش"
 
 #: libraries/common.lib.php:1237 setup/lib/messages.inc.php:353
 msgid "Validate SQL"
