--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-27 12:42+0200\n"
+"PO-Revision-Date: 2010-07-27 12:43+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1701,7 +1701,7 @@ msgstr "Inline edit of this query"
 
 #: libraries/common.lib.php:1289
 msgid "Inline"
-msgstr ""
+msgstr " ئىچكى بىرلىشىش"
 
 #: libraries/common.lib.php:1343 libraries/common.lib.php:1358
 msgid "Profiling"
