Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -1719,7 +1719,7 @@ msgstr "بايت"
 
 #: libraries/common.lib.php:1390
 msgid "KiB"
-msgstr ""
+msgstr "KiB"
 
 #: libraries/common.lib.php:1390
 msgid "MiB"
