--- a/po/ug.po
+++ b/po/ug.po
@@ -1723,7 +1723,7 @@ msgstr "KiB"
 
 #: libraries/common.lib.php:1390
 msgid "MiB"
-msgstr ""
+msgstr "MB"
 
 #: libraries/common.lib.php:1390
 msgid "GiB"
