Translation update done using Pootle.

--- a/po/uk.po
+++ b/po/uk.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-27 22:11+0200\n"
+"PO-Revision-Date: 2010-07-27 23:03+0200\n"
 "Last-Translator:  <zalex_ua@i.ua>\n"
 "Language-Team: ukrainian <uk@li.org>\n"
 "Language: uk\n"
@@ -3784,7 +3784,6 @@ msgid "Length/Values"
 msgstr "Довжини/Значення*"
 
 #: libraries/tbl_properties.inc.php:104
-#, fuzzy
 #| msgid ""
 #| "If field type is \"enum\" or \"set\", please enter the values using this "
 #| "format: 'a','b','c'...<br />If you ever need to put a backslash (\"\\\") "
@@ -3796,10 +3795,10 @@ msgid ""
 "a single quote (\"'\") amongst those values, precede it with a backslash "
 "(for example '\\\\xyz' or 'a\\'b')."
 msgstr ""
-"Для типів поля \"enum\" та \"set\", введіть значення згідно такого формату: "
-"'a','b','c'...<br />Якщо вам буде потрібно ввести зворотню косу риску (\"\\"
-"\"\") або поодинокі лапки (\"'\") посеред цих значень, поставте перед ними "
-"зворотню косу риску (наприклад, '\\\\xyz' чи 'a\\'b')."
+"Для типів поля \"enum\" або \"set\", введіть значення в такому форматі: "
+"'a','b','c'...<br />Якщо вам буде потрібно ввести зворотню косу риску (\"\\\") "
+"або поодинокі лапки (\"'\") посеред цих значень, поставте перед ними зворотню "
+"косу риску (наприклад, '\\\\xyz' чи 'a\\'b')."
 
 #: libraries/tbl_properties.inc.php:105
 msgid ""
