Translation update done using Pootle.

--- a/po/uk.po
+++ b/po/uk.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-27 23:03+0200\n"
+"PO-Revision-Date: 2010-07-27 23:05+0200\n"
 "Last-Translator:  <zalex_ua@i.ua>\n"
 "Language-Team: ukrainian <uk@li.org>\n"
 "Language: uk\n"
@@ -3833,10 +3833,10 @@ msgid ""
 "quote (\"'\") amongst those values, precede it with a backslash (for example "
 "'\\\\xyz' or 'a\\'b')."
 msgstr ""
-"Прошу вписати значення опцій перетворення у такому форматі: 'a', 100, "
-"b,'c'...<br />Якщо необхідно подати зворотній слеш (\"\\\") чи поодинокі "
-"лапки (\"'\") у цих значеннях, поставте перед ними додатковий зворотній слеш "
-"(наприклад '\\\\xyz' чи 'a\\'b')."
+"Введіть значення опцій перетворення у такому форматі: 'a', 100, b,'c'...<br "
+"/>Якщо необхідно ввести зворотній слеш (\"\\\") чи поодинокі лапки (\"'\") у цих "
+"значеннях, поставте перед ними додатковий зворотній слеш (наприклад '\\\\xyz' "
+"чи 'a\\'b')."
 
 #: libraries/tbl_properties.inc.php:391
 #, fuzzy
