--- a/po/uk.po
+++ b/po/uk.po
@@ -3855,7 +3855,8 @@ msgid ""
 "No description is available for this transformation.<br />Please ask the "
 "author what %s does."
 msgstr ""
-"Немає опису для цього перетворення.<br />Прошу питатися автора, що робить %s."
+"Немає опису для цього перетворення.<br />Прошу питатися автора, що робить %"
+"s."
 
 #: libraries/tbl_properties.inc.php:724 server_engines.php:56
 #: tbl_operations.php:352
