--- a/po/uk.po
+++ b/po/uk.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-27 10:12+0200\n"
-"PO-Revision-Date: 2010-07-27 23:13+0200\n"
+"PO-Revision-Date: 2010-07-27 23:14+0200\n"
 "Last-Translator:  <zalex_ua@i.ua>\n"
 "Language-Team: ukrainian <uk@li.org>\n"
 "Language: uk\n"
@@ -227,7 +227,7 @@ msgstr ""
 #: db_operations.php:231
 #, php-format
 msgid "Database %s has been renamed to %s"
-msgstr ""
+msgstr "Базу даних %s перейменовано в %s"
 
 #: db_operations.php:235
 #, php-format
